--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -182,6 +182,9 @@ a:focus {
     padding-left: 10px;
     padding-right: 10px;
 }
+.imga{
+	margin-top:40px;
+}
 /* 2.0 Dropdown */
 .dropdown-menu {
   box-shadow: none;
