--- a/src/main/resources/templates/shared/_left-side-bar.html
+++ b/src/main/resources/templates/shared/_left-side-bar.html
@@ -35,7 +35,7 @@
                             </li>
                             
                              <li>
-                               <a th:href="@{/role}" class="waves-effect"><i class="md md-event"></i><span th:text="#{roles}"> Role   </span></a>
+                               <a th:href="@{/role}" class="waves-effect"><i class="md md-event"></i><span th:text="#{tota}"> Role   </span></a>
                             </li> 
                             
                             <li>
