--- a/src/main/resources/templates/shared/_left-side-bar.html
+++ b/src/main/resources/templates/shared/_left-side-bar.html
@@ -41,6 +41,9 @@
                             <li>
                                 <a th:href="@{/rolelist}" class="waves-effect"><i class="md md-event"></i><span th:text="#{rolelist}"> Role List </span></a>
                             </li>
+                             <li>
+                                <a th:href="@{/user_detail}" class="waves-effect"><i class="md md-event"></i><span th:text="#{rolelist}"> User Detail </span></a>
+                            </li>
 
                           
 
