--- a/src/main/resources/templates/userlist.html
+++ b/src/main/resources/templates/userlist.html
@@ -51,7 +51,7 @@
                        						<td>
                        							<a th:href="@{/edit(user_hash=${USER.user_hash})}">Edit</a>
                        							<a th:href="@{/remove(user_hash=${USER.user_hash})}">Remove</a>
-                       							<a th:href="@{/detail(user_hash=${USER.user_hash})}">Detail</a>
+                       							<a th:href="@{/edit(user_hash=${USER.user_hash})}">Detail</a>
                        						</td>
                        						
                        					</tr>
