--- a/src/main/resources/templates/userlist.html
+++ b/src/main/resources/templates/userlist.html
@@ -35,7 +35,7 @@
                                         	 <th th:text="#{gender}">Gender</th>
                                             <th th:text="#{phone}">PhoneNumber</th>
                                             <th th:text="#{e}">Status</th>
-                                            <th th:text="#{u}">user_hash</th>
+                                            <th th:text="#{user_hash}">user_hash</th>
                           					<th th:text="#{action}">Action</th>
                                         </tr>
                                     </thead>
