--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -28,42 +28,42 @@
                                         <div class=" form">
                                             <form class="cmxform form-horizontal tasi-form" id="commentForm" th:method="POST"  th:action="${addStatus==true?'/usersave':'/update'}" novalidate="novalidate" th:object="${user}">
                                                 <div class="form-group ">
-                                                    <label for="cname" class="control-label col-lg-2"  >ID</label>
+                                                    <label for="cname" class="control-label col-lg-2" th:text="#{id}" >ID</label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{id}">
                                                     </div>
                                                 </div>
                                                 <div class="form-group ">
-                                                    <label for="cname" class="control-label col-lg-2" >Name </label>
+                                                    <label for="cname" class="control-label col-lg-2" th:text="#{n}" >Name </label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{username}" >
                                                     </div>
                                                 </div>
                                                 <div class="form-group ">
-                                                    <label for="cemail" class="control-label col-lg-2">E-Mail </label>
+                                                    <label for="cemail" class="control-label col-lg-2" th:text="#{email}">E-Mail </label>
                                                     <div class="col-lg-10">
                                                         <input class="form-control " id="cemail" type="email" name="email" required="" aria-required="true"  th:field="*{email}">
                                                     </div>
                                                 </div>
                                          
                                                 <div class="form-group ">
-                                                    <label for="cname" class="control-label col-lg-2" >Gender </label>
+                                                    <label for="cname" class="control-label col-lg-2" th:text="#{gender}">Gender </label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{gender}" >
                                                     </div>
                                                 </div>
                                                 <div class="form-group ">
-                                                     <label for="cname" class="control-label col-lg-2" >Phone Number </label>
+                                                     <label for="cname" class="control-label col-lg-2" th:text="#{phone}">Phone Number </label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{phonenumber}" >
                                                     </div>
                                                 </div><div class="form-group ">
-                                                     <label for="cname" class="control-label col-lg-2" >Status </label>
+                                                     <label for="cname" class="control-label col-lg-2" th:text="#{status}">Status </label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{status}" >
                                                     </div>
                                                 </div><div class="form-group ">
-                                                     <label for="cname" class="control-label col-lg-2" >user_hash </label>
+                                                     <label for="cname" class="control-label col-lg-2" th:text="#{user_hash}">user_hash </label>
                                                     <div class="col-lg-10">
                                                         <input class=" form-control" id="cname" name="name" type="text" required="" aria-required="true" th:field="*{user_hash}" readonly="readonly">
                                                     </div>
