--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -28,11 +28,11 @@
                                     <span class="mini-stat-icon bg-info"><i class="ion-social-usd"></i></span>
                                     <div class="mini-stat-info text-right text-muted">
                                         <span class="counter" th:text="${TOTALUSER}"></span>
-                                        Total User
+                                        <p th:text="#{totaluser}"></p>
                                     </div>
                                     <div class="tiles-progress">
                                         <div class="m-t-20">
-                                            <h5 class="text-uppercase">User <span class="pull-right">100%</span></h5>
+                                            <h5 class="text-uppercase"​ th:text="#{user}">User </h5><span class="pull-right" th:text="#{a}">100%</span>
                                             <div class="progress progress-sm m-0">
                                                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                                                     <span class="sr-only">100% Complete</span>
@@ -47,11 +47,11 @@
                                     <span class="mini-stat-icon bg-purple"><i class="ion-ios7-cart"></i></span>
                                     <div class="mini-stat-info text-right text-muted">
                                         <span class="counter" th:text="${TOTALMALE}"> </span>
-                                        Total Male
+                                        <p th:text="#{totalmale}">Total Male</p>
                                     </div>
                                     <div class="tiles-progress">
                                         <div class="m-t-20">
-                                            <h5 class="text-uppercase">Male <span class="pull-right">60%</span></h5>
+                                            <h5 class="text-uppercase"​ th:text="#{male}"> </h5><span class="pull-right" th:text="#{b}">60%</span>
                                             <div class="progress progress-sm m-0">
                                                 <div class="progress-bar progress-bar-purple" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                                     <span class="sr-only">60% Complete</span>
@@ -67,11 +67,11 @@
                                     <span class="mini-stat-icon bg-success"><i class="ion-eye"></i></span>
                                     <div class="mini-stat-info text-right text-muted">
                                         <span class="counter" th:text="${TOTALFEMALE}"></span>
-                                        Female
+                                        <p th:text="#{totalfemale}"></p>
                                     </div>
                                     <div class="tiles-progress">
                                         <div class="m-t-20">
-                                            <h5 class="text-uppercase">Femail <span class="pull-right">40%</span></h5>
+                                            <h5 class="text-uppercase" th:text="#{female}">Femail</h5> <span class="pull-right" th:text="#{c}">40%</span>
                                             <div class="progress progress-sm m-0">
                                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                                     <span class="sr-only">40% Complete</span>
@@ -87,11 +87,11 @@
                                     <span class="mini-stat-icon bg-primary"><i class="ion-android-contacts"></i></span>
                                     <div class="mini-stat-info text-right text-muted">
                                         <span class="counter" th:text="${TOTALUSERFALSE}"></span>
-                                        Users Lost
+                                        <p th:text="#{userlost}"></p>
                                     </div>
                                     <div class="tiles-progress">
                                         <div class="m-t-20">
-                                            <h5 class="text-uppercase">Users Lost <span class="pull-right">57%</span></h5>
+                                            <h5 class="text-uppercase" th:text="#{userlost}">Users Lost </h5><span class="pull-right" th:text="#{d}">57%</span>
                                             <div class="progress progress-sm m-0">
                                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100" style="width: 57%;">
                                                     <span class="sr-only">57% Complete</span>
